# billiards-graphics-api

./: CMakeLists.txt  graphics_api.service
src/: RenderLayoutParams.h  RenderParams.h  RenderShotOptions.h  RenderShotParams.h  graphics_api.cpp  render.h
